SUBDIRS =		\
	api		\
	bcast		\
	common		\
	database	\
	interfaces	\
	lua		\
	plugins		\
	sacct		\
	sacctmgr	\
	salloc		\
	sattach		\
	sbatch		\
	sbcast		\
	scancel		\
	scontrol	\
	scrontab	\
	sdiag		\
	sinfo		\
	slurmctld	\
	slurmd		\
	slurmdbd	\
	slurmrestd	\
	sprio		\
	squeue		\
	sreport		\
	srun		\
	sshare		\
	sstat		\
	strigger	\
	sview

# Using this flag to check if it's a Linux compilation
if WITH_CGROUP
SUBDIRS += scrun
endif
